Fix title vertical overflow

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -29,12 +29,15 @@
       margin-right: 1rem;
     }
 
+    &.title {
+      flex: 1;
+    }
+
     .burger-menu {
       @include for-tablet-portrait-up {
         margin-left: 2rem;
       }
       color: $white;
-      display: inline-block;
       font-size: 2rem;
       margin: 0 1rem;
 
@@ -50,9 +53,11 @@
         padding-left: 2rem;
       }
       color: $white;
+      display: inline-block;
       flex: 1;
       font-size: 1.7rem;
       font-weight: bold;
+      // width: 15rem;
     }
 
     .header-date {
